--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,7 +24,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.19.4'
-          channel: 'stable
+          channel: 'stable'
       - name: Install Dependencies
         run: flutter pub get
       - name: Prepare flash screen
