--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
   assets:
     - assets/
     - assets/welcome/
+    - assets/home/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
