--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_native_splash: ^2.4.0
   font_awesome_flutter: ^10.7.0
+  google_fonts: ^6.2.1
   pinput: ^4.0.0
 
 dev_dependencies:
@@ -65,6 +66,7 @@ flutter:
     - assets/
     - assets/welcome/
     - assets/home/
+    - assets/icons/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
