--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -36,6 +36,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v2
         with:
+          retention-days: 2
           name: Releases
           path: |
               build/app/outputs/flutter-apk/app-release.apk
